base/standalone-components/loki/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: loki
  namespace: loki
  labels:
    app: loki
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    # Basic-auth from guide; 
    # type of authentication
    nginx.ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    nginx.ingress.kubernetes.io/auth-secret: loki-basic-auth
    # message to display with an appropriate context why the authentication is required
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - sdpteam'
spec:
  tls:
    - hosts:
        - loki.sdpaks.equinor.com
      secretName: loki-tls
  rules:
    - host: loki.sdpaks.equinor.com
      http:
        paths:
          - path: /
            backend:
              serviceName: loki-stack
              servicePort: 3100
